--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,1 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
+
+.v-application {
+  .logo {
+    font-family: "Righteous", cursive !important;
+  }
+}
