[update] 補足情報へのリンクを追加した。

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
 
 .v-application {
+  // ホームページロゴは Google Fonts 「Righteous」を使用する。
   .logo {
     font-family: "Righteous", cursive !important;
   }
